Fixed trailing constraint issue and not checking isViewLoaded

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -46,6 +46,7 @@
                                         <constraint firstItem="SG1-LQ-xmN" firstAttribute="trailing" secondItem="ehf-bc-V8A" secondAttribute="trailingMargin" id="1Iz-pH-BRm"/>
                                         <constraint firstItem="v0u-rL-OgY" firstAttribute="top" secondItem="ehf-bc-V8A" secondAttribute="topMargin" id="9Ey-CO-LI0"/>
                                         <constraint firstItem="Zkv-5F-l4j" firstAttribute="leading" secondItem="ehf-bc-V8A" secondAttribute="leadingMargin" id="AUe-gv-kQa"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Zkv-5F-l4j" secondAttribute="trailing" constant="8" id="Rps-bU-RVs"/>
                                         <constraint firstItem="Zkv-5F-l4j" firstAttribute="bottom" secondItem="ehf-bc-V8A" secondAttribute="bottomMargin" id="TcM-yA-v9s"/>
                                         <constraint firstItem="v0u-rL-OgY" firstAttribute="leading" secondItem="ehf-bc-V8A" secondAttribute="leadingMargin" id="gDt-s9-V3R"/>
                                         <constraint firstItem="SG1-LQ-xmN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="v0u-rL-OgY" secondAttribute="trailing" constant="8" id="oVg-Wi-Jn6"/>
