part two complete

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                                     <outlet property="descriptionLabel" destination="3TC-Qm-tDc" id="wZy-5S-Mdd"/>
                                     <outlet property="timeStampLabel" destination="wyH-gN-r57" id="I45-3c-Cal"/>
                                     <outlet property="titleLabel" destination="UyS-0o-94W" id="y9E-3u-2h8"/>
-                                    <segue destination="iTg-nj-4jm" kind="presentation" identifier="JournalDetailModalSugue" trigger="accessoryAction" modalPresentationStyle="fullScreen" id="x3r-NY-IgP"/>
+                                    <segue destination="iTg-nj-4jm" kind="presentation" identifier="EntryDetailModalSugue" trigger="accessoryAction" modalPresentationStyle="fullScreen" id="x3r-NY-IgP"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -169,6 +169,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="fCq-92-Vhv"/>
+        <segue reference="x3r-NY-IgP"/>
     </inferredMetricsTieBreakers>
 </document>
